--- a/src/app/core/sidenav/user-playlist-list/user-playlist-list.component.scss
+++ b/src/app/core/sidenav/user-playlist-list/user-playlist-list.component.scss
@@ -7,6 +7,9 @@
   border-radius: 5px;
   border: 3px solid transparent;
   &:hover{
+    .more{
+      opacity: 1;
+    }
     .showing{
       opacity: 1;
     }
@@ -96,4 +99,16 @@
 }
 .active{
   color: var(--main-color) !important;
+}
+.more{
+  position: absolute;
+  top: 0;
+  right: 20px;
+  opacity: 0;
+  mat-icon{
+    color: var(--light);
+  }
+}
+.selected{
+  background: var(--light-black);
 }
