--- a/src/app/shared/track-table/track-table.component.scss
+++ b/src/app/shared/track-table/track-table.component.scss
@@ -308,3 +308,15 @@ table{
 .opacity-05{
   opacity: .5;
 }
+.search-playlist{
+  display: flex;
+  flex-direction: row;
+  background: var(--gray);
+  input[type=text]{
+    border: none;
+    outline: none;
+    background: none;
+    color: var(--light);
+    font-size: 13px;
+  }
+}
