--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -38,7 +38,7 @@
         <div class="row">
           <p>{{followings.length}} Following</p>
           <div class="divider-h"></div>
-          <p>{{playlists.length}} Playlists</p>
+          <p>{{_playlistService.playlists().length}} Playlists</p>
         </div>
       </div>
     </div>
