--- a/src/app/playlists/add-tracks-to-playlist-dialog/add-tracks-to-playlist-dialog.component.html
+++ b/src/app/playlists/add-tracks-to-playlist-dialog/add-tracks-to-playlist-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="dialog">
+
   <h2 mat-dialog-title>{{ data.message }}</h2>
   <div mat-dialog-content>
     <p>{{ data.content }}</p>
@@ -8,18 +8,16 @@
     @for(btn of data.actions; track btn) {
       @if(data.status === 'warning-all') {
         @if (btn === 'Add anyway') {
-          <button mat-button (click)="addAnyway(data.playlist_id, data.tracks_already_in_playlist)">{{ btn }}</button>
+          <button mat-raised-button (click)="addAnyway(data.playlist_id, data.tracks_already_in_playlist)">{{ btn }}</button>
         } @else if (btn === 'Don\'t add') {
-          <button mat-button (click)="closeDialog()">{{ btn }}</button>
+          <button mat-raised-button (click)="closeDialog()">{{ btn }}</button>
         }
       } @else if (data.status === 'warning-some') {
         @if (btn === 'Add all') {
-          <button mat-button (click)="addAll(data.playlist_id, data.all_tracks_id)">{{ btn }}</button>
+          <button mat-raised-button (click)="addAll(data.playlist_id, data.all_tracks_id)">{{ btn }}</button>
         } @else if (btn === 'Add new ones') {
-          <button mat-button (click)="addNewOnes()">{{ btn }}</button>
+          <button mat-raised-button (click)="addNewOnes()">{{ btn }}</button>
         }
       }
     }
   </div>
-
-</div>
