--- a/src/styles.scss
+++ b/src/styles.scss
@@ -99,17 +99,31 @@ a{
 }
 .mat-mdc-menu-panel{
   padding: 0;
-  background-color: #2f2f2f !important;
+  background-color: #181818 !important;
   .mat-mdc-menu-content{
-    padding: 0;
+    padding: 5px;
     display: flex;
     flex-direction: column;
   }
   .mat-mdc-menu-item{
+    min-height: 40px;
     height: 10px;
-    background: var(--primary-black);
     color: var(--primary-text);
     font-size: 13px;
+    padding-left: 10px;
+    padding-right: 10px;
+    &:hover{
+      background: rgba(255, 255, 255, 0.1) !important;
+    }
+    .mat-icon{
+      font-size: 22px;
+      height: 22px;
+      width: 22px;
+      color: var(--light-gray) !important;
+    }
+  }
+  .mat-mdc-menu-item:not([disabled]).mat-mdc-menu-item-highlighted {
+    background: rgba(255, 255, 255, 0.1) !important;
   }
 }
 mat-dialog-container{
@@ -166,7 +180,7 @@ mat-dialog-container{
   --light: #ffffff;
   --lighter: #e1e1e1;
   --lightest: #f8f8f8;
-  --light-black: #1f1f1f;
+  --light-black: #232323;
   --secondary-black: #101010;
   --genre-detail: #000;
   --profile: linear-gradient(#532472, #000000);
