--- a/src/app/admin/genres/add-genre-dialog/add-genre-dialog.component.html
+++ b/src/app/admin/genres/add-genre-dialog/add-genre-dialog.component.html
@@ -5,11 +5,14 @@
       <mat-form-field appearance="outline" floatLabel="always">
         <mat-label>Genre name</mat-label>
         <input matInput type="text" placeholder="Enter genre name" formControlName="name"/>
+        @if (genreForm.get('name')?.hasError('required')) {
+          <mat-error>Name is required</mat-error>
+        }
       </mat-form-field>
     </form>
   </div>
   <div mat-dialog-actions>
-    <button mat-button>Create</button>
+    <button mat-button (click)="createGenre()">Create</button>
     <button mat-button mat-dialog-close>Cancel</button>
   </div>
 </div>
