--- a/src/app/admin/users/user-search-form/user-search-form.component.html
+++ b/src/app/admin/users/user-search-form/user-search-form.component.html
@@ -1,17 +1,20 @@
 <form [formGroup]='userFormGroup' class="search-form">
   <mat-form-field appearance="outline" floatLabel="always">
-    <mat-label>First name</mat-label>
-    <input matInput type="text" placeholder="Search by first name" formControlName="firstName"/>
-  </mat-form-field>
-
-  <mat-form-field appearance="outline" floatLabel="always">
-    <mat-label>Last name</mat-label>
-    <input matInput type="text" placeholder="Search by last name" formControlName="lastName"/>
+    <mat-label>Username</mat-label>
+    <input matInput type="text" placeholder="Search by username" formControlName="username"/>
   </mat-form-field>
 
   <mat-form-field appearance="outline" floatLabel="always">
     <mat-label>Email</mat-label>
     <input matInput type="text" placeholder="Search by email" formControlName="email"/>
+  </mat-form-field>
+  <mat-form-field appearance="outline" floatLabel="always">
+    <mat-label>Role</mat-label>
+    <mat-select formControlName="role" placeholder="Choose role">
+      @for (role of roles; track role.id) {
+        <mat-option [value]="role.id">{{role.name}}</mat-option>
+      }
+    </mat-select>
   </mat-form-field>
   <mat-form-field appearance="outline" floatLabel="always">
     <mat-label>Active</mat-label>
