--- a/src/app/admin/artists/artist-form-dialog/artist-form-dialog.component.html
+++ b/src/app/admin/artists/artist-form-dialog/artist-form-dialog.component.html
@@ -29,7 +29,7 @@
   </div>
 
   <div mat-dialog-actions>
-    <button mat-button>
+    <button mat-button (click)="submitForm()">
       @if (data.isEdit) {
         Update
       } @else {
