admin updates; static functions for spinner

--- a/src/app/core/loader/loader.component.html
+++ b/src/app/core/loader/loader.component.html
@@ -1,4 +1,4 @@
-<div class="loader-container">
+<div class="loader-container" id="global-spinner">
   <div class="loader"></div>
   <div class="loader"></div>
   <div class="loader"></div>
