--- a/src/app/user/settings/settings.component.html
+++ b/src/app/user/settings/settings.component.html
@@ -1,15 +1,15 @@
-@if (settings.id) {
+@if (userService.user() && userService.user()!.settings.id) {
   <div class="container">
     <h1>Your info</h1>
     <div class="rows">
       <div class="row">
         <p>Username</p>
-        <p>{{user.username}}</p>
+        <p>{{userService.user()!.username}}</p>
       </div>
       <mat-divider></mat-divider>
       <div class="row">
         <p>Email</p>
-        <p>{{user.email}}</p>
+        <p>{{userService.user()!.email}}</p>
       </div>
       <h1>Your preferences</h1>
       <div class="row-preference">
@@ -18,7 +18,7 @@
           <p>Allow explicit content labeled with E tag. </p>
         </div>
         <div class="right">
-          <mat-slide-toggle [checked]="this.settings.explicit" (change)="update($event.checked, 'explicit')"></mat-slide-toggle>
+          <mat-slide-toggle [checked]="userService.user()!.settings.explicit" (change)="update($event.checked, 'explicit')"></mat-slide-toggle>
         </div>
       </div>
       <mat-divider></mat-divider>
@@ -28,7 +28,7 @@
           <p>Enable saving history. </p>
         </div>
         <div class="right">
-          <mat-slide-toggle [checked]="this.settings.history" (change)="update($event.checked, 'history')" #history></mat-slide-toggle>
+          <mat-slide-toggle [checked]="userService.user()!.settings.history" (change)="update($event.checked, 'history')" #history></mat-slide-toggle>
         </div>
       </div>
     </div>
