--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,6 +61,16 @@ $zavrsniAng-theme: mat.define-light-theme((
   font-family: Regular, "Helvetica Neue", sans-serif;
 }
 div,html{
+
+  --mat-select-panel-background-color: var(--light-black);
+  --mat-select-enabled-trigger-text-color: rgba(255, 255, 255, .87);
+  --mat-select-disabled-trigger-text-color: rgba(255, 255, 255, .38);
+  --mat-select-placeholder-text-color: rgba(255, 255, 255, .6);
+  --mat-select-enabled-arrow-color: rgba(255, 255, 255, .54);
+  --mat-select-disabled-arrow-color: rgba(255, 255, 255, .38);
+  --mat-select-focused-arrow-color: var(--primary-color);
+  --mat-select-invalid-arrow-color: rgba(244, 67, 54, .87);
+
   &::-webkit-scrollbar{
     width: 10px;
     background: #6b6b6b;
@@ -927,4 +937,25 @@ form{
     justify-content: center;
     background: var(--light-gray);
   }
+}
+
+.mat-mdc-option.mdc-list-item--selected:not(.mdc-list-item--disabled) .mdc-list-item__primary-text {
+  color: var(--light) !important;
+}
+.mat-mdc-option.mdc-list-item--selected:not(.mdc-list-item--disabled) .mdc-list-item__primary-text {
+  &:after{
+    color: var(--light) !important;
+  }
+}
+.mdc-list-item__primary-text {
+  color: var(--light-gray) !important;
+}
+.mdc-text-field--filled:not(.mdc-text-field--disabled) {
+  background-color: var(--secondary-black) !important;
+}
+.mdc-text-field--filled:not(.mdc-text-field--disabled) .mdc-floating-label, .mdc-text-field--filled:not(.mdc-text-field--disabled) .mdc-floating-label--float-above {
+  color: var(--light-gray) !important;
+}
+.mdc-text-field--filled{
+  font-size: 13px !important;
 }
