--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -2,8 +2,8 @@
 @if (loading) {
   <app-loader></app-loader>
 } @else {
-  <ng-container *ngIf="query.length == 0; else results">
-    <div class="genres-container" *ngIf="query.length === 0">
+  <ng-container *ngIf="this._searchService.querySignal().length == 0; else results">
+    <div class="genres-container" *ngIf="this._searchService.querySignal().length === 0">
       <h1>Explore genres</h1>
       <div class="genres">
         <ng-container *ngFor="let genre of genres">
@@ -14,15 +14,12 @@
   </ng-container>
   <ng-template #results>
     <ng-container
-      *ngIf="
-      !response.tracks?.total &&
-        !response.artists?.data?.length &&
-        !response.albums?.data?.length;
+      *ngIf="_searchService.totalResults() === 0;
       else show
     "
     >
       <div class="no-response">
-        <p>No results for "{{ query }}"</p>
+        <p>No results for "{{ this._searchService.querySignal() }}"</p>
         <p>
           Please make sure your words are spelled correctly, or use fewer or
           different keywords.
@@ -32,104 +29,119 @@
 
     <ng-template #show>
       <div class="response">
-        <ng-container *ngIf="response.tracks?.total">
-          <div class="tracks-container">
-            <h1>Tracks</h1>
+        <form [formGroup]="_searchService.pageGroup">
+          <ng-container *ngIf="_searchService.tracksPagedResponse()?.total">
+            <div class="tracks-container">
+              <h1>Tracks</h1>
 
-            <div class="tracks">
-              <app-track-table
-                [tracks]="response.tracks?.data!"
-                [from]="from"
-              ></app-track-table>
-              <div class="pagination">
-                <p>
-                  Showing {{ response.tracks!.from }} -
-                  {{ response.tracks!.to }} tracks of {{ response.tracks!.total }}
-                </p>
-                <ng-container *ngIf="response.tracks!.prev_page_url">
-                  <button matRipple (click)="goToPreviousPaginatedPageTrack()">
+              <div class="tracks">
+                <app-track-table
+                  [tracks]="_searchService.tracksPagedResponse()?.data!"
+                  [from]="from"
+                ></app-track-table>
+                <div class="pagination">
+                  <p>
+                    Showing {{ _searchService.tracksPagedResponse()?.from }} -
+                    {{ _searchService.tracksPagedResponse()?.to }} tracks of {{ _searchService.tracksPagedResponse()?.total }}
+                  </p>
+                  <button matRipple (click)="goToPreviousPaginatedPageTrack(_searchService.tracksPagedResponse()?.prev_page_url!)" [disabled]="!_searchService.tracksPagedResponse()?.prev_page_url">
                     <img src="assets/icons-svg/back.svg" />
                   </button>
-                </ng-container>
-                <ng-container *ngIf="response.tracks!.next_page_url">
                   <button
                     matRipple
                     (click)="
-                    goToNextPaginatedPageTrack(response.tracks!.next_page_url)
-                  "
+                    goToNextPaginatedPageTrack(_searchService.tracksPagedResponse()?.next_page_url!)" [disabled]="!_searchService.tracksPagedResponse()?.next_page_url"
                   >
                     <img class="next" src="assets/icons-svg/back.svg" />
                   </button>
-                </ng-container>
+                  <mat-form-field class="no-bottom">
+                    <mat-label>Go to page</mat-label>
+                    <mat-select formControlName="tracks_page" (selectionChange)="onGoToPageChange('tracks', $event)">
+                      @for (page of _searchService.tracksPages(); track page) {
+                        <mat-option [value]="page">{{page}}</mat-option>
+                      }
+                    </mat-select>
+                  </mat-form-field>
+                </div>
               </div>
             </div>
-          </div>
-        </ng-container>
+          </ng-container>
 
-        <ng-container *ngIf="response.artists?.total">
-          <div class="albums-container">
-            <h1>Artists</h1>
-            <div class="albums">
-              <ng-container *ngFor="let artist of response.artists?.data">
-                <app-artist-card [artist]="artist"></app-artist-card>
-              </ng-container>
-            </div>
-            <div class="pagination">
-              <p>
-                Showing from {{ response.artists!.from }} -
-                {{ response.artists!.to }} artists of
-                {{ response.artists!.total }}
-              </p>
-              <ng-container *ngIf="response.artists!.prev_page_url">
-                <button matRipple (click)="goToPreviousPaginatedPageArtist()">
+          <ng-container *ngIf="this._searchService.artistsPagedResponse()?.total">
+            <div class="albums-container">
+              <h1>Artists</h1>
+              <div class="albums">
+                <ng-container *ngFor="let artist of this._searchService.artistsPagedResponse()?.data">
+                  <app-artist-card [artist]="artist"></app-artist-card>
+                </ng-container>
+              </div>
+              <div class="pagination">
+                <p>
+                  Showing from {{ this._searchService.artistsPagedResponse()?.from }} -
+                  {{ this._searchService.artistsPagedResponse()?.to }} artists of
+                  {{ this._searchService.artistsPagedResponse()?.total }}
+                </p>
+                <button matRipple (click)="goToPreviousPaginatedPageArtist(this._searchService.artistsPagedResponse()?.prev_page_url!)" [disabled]="!_searchService.artistsPagedResponse()?.prev_page_url">
                   <img src="assets/icons-svg/back.svg" />
                 </button>
-              </ng-container>
-              <ng-container *ngIf="response.artists!.next_page_url">
                 <button
+                  [disabled]="!_searchService.artistsPagedResponse()?.next_page_url"
+                  matRipple
+                  (click)="goToNextPaginatedPageArtist(this._searchService.artistsPagedResponse()?.next_page_url!)"
+                >
+                  <img class="next" src="assets/icons-svg/back.svg" />
+                </button>
+
+                <mat-form-field class="no-bottom">
+                  <mat-label>Go to page</mat-label>
+                  <mat-select  formControlName="artists_page" (selectionChange)="onGoToPageChange('artists', $event)">
+                    @for (page of _searchService.artistsPages(); track page) {
+                      <mat-option [value]="page">{{page}}</mat-option>
+                    }
+                  </mat-select>
+                </mat-form-field>
+              </div>
+            </div>
+          </ng-container>
+
+          <ng-container *ngIf="this._searchService.albumsPagedResponse()?.total">
+            <div class="albums-container">
+              <h1>Albums</h1>
+              <div class="albums">
+                <ng-container *ngFor="let album of this._searchService.albumsPagedResponse()?.data">
+                  <app-album-card [album]="album"></app-album-card>
+                </ng-container>
+              </div>
+              <div class="pagination">
+                <p>
+                  Showing from {{ this._searchService.albumsPagedResponse()?.from }} -
+                  {{ this._searchService.albumsPagedResponse()?.to }} albums of {{ this._searchService.albumsPagedResponse()?.total }}
+                </p>
+                <button matRipple (click)="goToPreviousPaginatedPageAlbum(this._searchService.albumsPagedResponse()?.prev_page_url!)" [disabled]="!_searchService.albumsPagedResponse()?.prev_page_url">
+                  <img src="assets/icons-svg/back.svg" />
+                </button>
+                <button
+                  [disabled]="!_searchService.albumsPagedResponse()?.next_page_url"
                   matRipple
                   (click)="
-                  goToNextPaginatedPageArtist(response.artists!.next_page_url)
+                  goToNextPaginatedPageAlbum(this._searchService.albumsPagedResponse()?.next_page_url!)
                 "
                 >
                   <img class="next" src="assets/icons-svg/back.svg" />
                 </button>
-              </ng-container>
-            </div>
-          </div>
-        </ng-container>
+                <mat-form-field class="no-bottom">
+                  <mat-label>Go to page</mat-label>
+                  <mat-select formControlName="albums_page" (selectionChange)="onGoToPageChange('albums', $event)">
+                    @for (page of _searchService.albumsPages(); track page) {
+                      <mat-option [value]="page">{{page}}</mat-option>
+                    }
+                  </mat-select>
+                </mat-form-field>
 
-        <ng-container *ngIf="response.albums?.total">
-          <div class="albums-container">
-            <h1>Albums</h1>
-            <div class="albums">
-              <ng-container *ngFor="let album of response.albums?.data">
-                <app-album-card [album]="album"></app-album-card>
-              </ng-container>
+              </div>
             </div>
-            <div class="pagination">
-              <p>
-                Showing from {{ response.albums!.from }} -
-                {{ response.albums!.to }} albums of {{ response.albums!.total }}
-              </p>
-              <ng-container *ngIf="response.albums!.prev_page_url">
-                <button matRipple (click)="goToPreviousPaginatedPageAlbum()">
-                  <img src="assets/icons-svg/back.svg" />
-                </button>
-              </ng-container>
-              <ng-container *ngIf="response.albums!.next_page_url">
-                <button
-                  matRipple
-                  (click)="
-                  goToNextPaginatedPageAlbum(response.albums!.next_page_url)
-                "
-                >
-                  <img class="next" src="assets/icons-svg/back.svg" />
-                </button>
-              </ng-container>
-            </div>
-          </div>
-        </ng-container>
+          </ng-container>
+        </form>
       </div>
     </ng-template>
   </ng-template>
