--- a/src/app/shared/track-table/track-table.component.html
+++ b/src/app/shared/track-table/track-table.component.html
@@ -22,7 +22,7 @@
     @for (track of tracks; track track.id; let index = $index;) {
       @defer(on viewport){
       <tr cdkDrag (cdkDragDropped)="onDragDropped($event)" (cdkDragStarted)="onDragStarted($event)" class="item"
-          [ngClass]="{'selected' : selectedTracks.has(index), 'disabled' : _userService.userLoaded() && track.explicit && !_userService.settings().explicit}" (click)="selectTrack($event, index,track)"
+          [ngClass]="{'selected' : selectedTracks.has(index), 'disabled' : _userService.userLoaded() && track.explicit && !_userService.user()!.settings.explicit}" (click)="selectTrack($event, index,track)"
           (contextmenu)="openMenuOnRightClick($event, track)" (dblclick)="playAllFromIndex(tracks, index, from)">
         @if (selectedTracks.size > 0) {
           <p *cdkDragPreview class="preview">{{selectedTracks.size}} tracks selected</p>
@@ -55,12 +55,12 @@
             <button class="play" (click)="playAllFromIndex(tracks, index, from)">
               <img src="assets/icons-svg/play.svg" />
             </button>
-          } @else if (this._userService.settings().explicit && track.explicit) {
+          } @else if (this._userService.user()!.settings.explicit && track.explicit) {
             <button class="play" (click)="playAllFromIndex(tracks, index, from)">
               <img src="assets/icons-svg/play.svg" />
             </button>
           }
-          @else if (!this._userService.settings().explicit && track.explicit){
+          @else if (!this._userService.user()!.settings.explicit && track.explicit){
             <div class="disabled-icon">
               <mat-icon>block</mat-icon>
             </div>
