queue, audio, admin, interceptors and playlists fix

--- a/src/app/shared/track-table/track-table.component.html
+++ b/src/app/shared/track-table/track-table.component.html
@@ -242,13 +242,23 @@
 </td>
 </tr>
 }
-@loading {
-  <app-loading></app-loading>
-}
 @placeholder {
-  <div class="placeholder">
+  <tr>
+    <td [colSpan]="12">
+      <div class="placeholder">
 
-  </div>
+        <div class="image"></div>
+
+        <div class="info-left">
+          <div class="text-top"></div>
+          <div class="text-bottom"></div>
+        </div>
+
+        <div class="info-right"></div>
+
+      </div>
+    </td>
+  </tr>
 }
 }
 
