--- a/src/app/shared/track-table/track-table.component.scss
+++ b/src/app/shared/track-table/track-table.component.scss
@@ -302,8 +302,42 @@ table{
 }
 
 .placeholder{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  column-gap: 20px;
+  background-color: var(--primary-black);
+  .image{
+    margin-left: 5px;
+    width: 40px;
+    height: 40px;
+    background-color: var(--secondary-black);
 
-  background-color: var(--secondary-black);
+  }
+
+  .info-left{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    column-gap: 5px;
+    .text-top{
+      height: 15px;
+      width: 100px;
+      background-color: var(--secondary-black);
+    }
+    .text-bottom{
+      height: 15px;
+      width: 150px;
+      background-color: var(--secondary-black);
+    }
+  }
+
+  .info-right{
+
+  }
 }
 .opacity-05{
   opacity: .5;
